# crusty_stopwatch

./: .gitignore  README.md
.cargo/: config.toml
crates/cli_stopwatch/: Cargo.toml
crates/cli_stopwatch/.date_during_dev/: data.ron
crates/cli_stopwatch/src/: cli_parse.rs  file_access.rs  handling_of_commands.rs  main.rs  tables.rs
crates/core_stopwatch/: Cargo.toml
crates/core_stopwatch/src/: chrono_duration_serde.rs  data_source.rs  file_access.rs  formating.rs  lib.rs  now_provider.rs  stopwatch.rs  timer.rs  timers.rs
crates/core_stopwatch/src/snapshots/: core_stopwatch__data_source__testing__serilize_stopwatches.snap  core_stopwatch__testing__serilize_stopwatches.snap
crates/tui_stopwatch/: Cargo.toml
crates/tui_stopwatch/src/: drawing.rs  main.rs  user_data.rs
