[package]
name = "core_stopwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
derive-getters = "0.3.0"
derive-new = "0.5.9"
ron = "0.8.0"
serde = { version = "1.0.166", features = ["derive"] }
thiserror = "1.0.41"

[dev-dependencies]
insta = "1.30.0"
